@@ -42,6 +42,7 @@ package sun.util.resources;
 
 import java.security.AccessController;
 import java.security.PrivilegedAction;
+import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Locale;
@@ -204,7 +205,7 @@ public class LocaleData {
         });
     }
 
-    private abstract static class LocaleDataResourceBundleProvider
+    private static abstract class LocaleDataResourceBundleProvider
                                             implements ResourceBundleProvider {
         /**
          * Changes baseName to its module dependent package name and
@@ -230,14 +231,14 @@ public class LocaleData {
      * A ResourceBundleProvider implementation for loading locale data
      * resource bundles except for the java.time supplementary data.
      */
-    public abstract static class CommonResourceBundleProvider extends LocaleDataResourceBundleProvider {
+    public static abstract class CommonResourceBundleProvider extends LocaleDataResourceBundleProvider {
     }
 
     /**
      * A ResourceBundleProvider implementation for loading supplementary
      * resource bundles for java.time.
      */
-    public abstract static class SupplementaryResourceBundleProvider extends LocaleDataResourceBundleProvider {
+    public static abstract class SupplementaryResourceBundleProvider extends LocaleDataResourceBundleProvider {
     }
 
     // Bundles.Strategy implementations
@@ -245,7 +246,7 @@ public class LocaleData {
     private static class LocaleDataStrategy implements Bundles.Strategy {
         private static final LocaleDataStrategy INSTANCE = new LocaleDataStrategy();
         // TODO: avoid hard-coded Locales
-        private static final Set<Locale> JAVA_BASE_LOCALES
+        private static Set<Locale> JAVA_BASE_LOCALES
             = Set.of(Locale.ROOT, Locale.ENGLISH, Locale.US, new Locale("en", "US", "POSIX"));
 
         private LocaleDataStrategy() {
@@ -253,7 +254,7 @@ public class LocaleData {
 
         /*
          * This method overrides the default implementation to search
-         * from a prebaked locale string list to determine the candidate
+         * from a prebaked locale string list to determin the candidate
          * locale list.
          *
          * @param baseName the resource bundle base name.
@@ -324,7 +325,7 @@ public class LocaleData {
         private static final SupplementaryStrategy INSTANCE
                 = new SupplementaryStrategy();
         // TODO: avoid hard-coded Locales
-        private static final Set<Locale> JAVA_BASE_LOCALES
+        private static Set<Locale> JAVA_BASE_LOCALES
             = Set.of(Locale.ROOT, Locale.ENGLISH, Locale.US);
 
         private SupplementaryStrategy() {
@@ -332,8 +333,8 @@ public class LocaleData {
 
         @Override
         public List<Locale> getCandidateLocales(String baseName, Locale locale) {
-            // Specify only the given locale
-            return List.of(locale);
+            // Specifiy only the given locale
+            return Arrays.asList(locale);
         }
 
         @Override
